--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
