--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
     "next": "13.4.1",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "webpack": "^5.82.1"
   }
 }
